Ajustes historico de interessados

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -677,15 +677,21 @@ margin:0px 10px;
 #contentInternas #guardaHistoricoContatos{
     width:470px;
     display:inline-block;
-    border-bottom:1px solid #aaa;
     margin:0px 0px 20px 0px;
+    border-bottom:1px solid #aaa;
+}
+
+#contentInternas #guardaHistoricoContatos li{
+    float:left;
+    width:470px;
+    padding:15px 0px 15px 0px;
+    border-top:1px solid #aaa;
 }
 
 #guardaHistoricoContatos .historicoContatos{
     float:left;
     width:450px;
-    border-top:1px solid #aaa;
-    padding:20px 10px 20px 10px;
+    padding:10px 10px 10px 10px;
 }
 
 #guardaHistoricoContatos .historicoContatos span{
