--- a/app/views/interessados/show.html.erb
+++ b/app/views/interessados/show.html.erb
@@ -30,8 +30,7 @@
 	<% @interested_contact.each do |c| %>
 	<li>
 		<p>
-			<span><%= c.date %></span>
-			<span><%= c.description %></span>
+			<span><%= c.date %></span> - <span><%= c.description %></span>
 		</p>
 	</li>
 	<% end %>
