--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -546,6 +546,7 @@ margin:0px 10px;
 
 #contentInternas #guardaAtividadesRecentes p span{
     float:left;
+    padding-top:7px;
     padding-right:10px;
 }
 
