--- a/app/views/cursos/index.html.erb
+++ b/app/views/cursos/index.html.erb
@@ -32,10 +32,10 @@
     
     <% @course.each do |c| %>
       <p>
-        <span><%= c.code %></span>
+        <!-- <span><%#= c.code %></span> -->
         <span><%= c.name %></span>
         <span><%= c.categoria %></span>
-        <%= link_to 'Abrir', courses_show_path(c), :class => 'btVoltarForm' %>
+        <%= link_to 'Abrir', courses_edit_path(c), :class => 'btVoltarForm' %>
       </p>
     <% end %>
 
