--- a/app/views/cursos/show.html.erb
+++ b/app/views/cursos/show.html.erb
@@ -19,7 +19,7 @@
 		<li><p><span>0</span> Em Andamento</p></li>
 		<li><p><span>0</span> Concluídas</p></li>
 		<li><p><span>0</span> Canceladas</p></li>
-		<li><p><span>0</span> Interessados</p></li>
+		<!-- <li><p><span>0</span> Interessados</p></li> -->
 	</ul>
 </div>
 
