--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
                     <ul>
                         <li><%= link_to "", dashboard_path, :id => "home", :title => "Página inicial"%></li>
                         <li><%= link_to "", cursos_index_path, :id => "cursos", :title => "Cursos"%></li>
-                        <li><%= link_to "", servicos_index_path, :id => "servicos", :title => "Serviços"%></li>
+                        <li><%= link_to "", services_path, :id => "servicos", :title => "Serviços"%></li>
                         <li><%= link_to "", assessoria_index_path, :id => "assessoria", :title => "Assessoria"%></li>
                         <li><%= link_to "", financeiro_index_path, :id => "financeiro", :title => "Financeiro"%></li>
                     </ul>
