Criando ajax de atividades no planejamento

--- a/app/views/turmas/index.html.erb
+++ b/app/views/turmas/index.html.erb
@@ -74,13 +74,13 @@
 
       <% @team.each do |t| %>
         <tr border="0">
-            <td width="14%"><span><%= link_to t.code, teams_show_path(t.id) %></span></td>
-            <td width="14%"><span><%= link_to t.name, teams_show_path(t.id) %></span></td>
-            <td width="14%"><span><%= link_to t.curso, teams_show_path(t.id) %></span></td>
-            <td width="14%"><span><%= link_to t.periodo, teams_show_path(t.id) %></span></td>
-            <td width="14%"><span><%= link_to "Em andamento", teams_show_path(t.id) %></span></td>
+            <td width="14%"><span><%= link_to t.code, teams_show_path(t) %></span></td>
+            <td width="14%"><span><%= link_to t.name, teams_show_path(t) %></span></td>
+            <td width="14%"><span><%= link_to t.curso, teams_show_path(t) %></span></td>
+            <td width="14%"><span><%= link_to t.periodo, teams_show_path(t) %></span></td>
+            <td width="14%"><span><%= link_to "Em andamento", teams_show_path(t) %></span></td>
             <td width="14%"><span><%= link_to "Presenças", "javascript:void(0);", :class => 'btVoltarForm' %></span></td>
-            <td width="14%"><span><%= link_to "Planejamento", "javascript:void(0);", :class => 'btVoltarForm' %></span></td>
+            <td width="14%"><span><%= link_to "Planejamento", teams_planning_path(t), :class => 'btVoltarForm' %></span></td>
         </tr>
       <% end %>
 
