--- a/app/views/turmas/planning.html.erb
+++ b/app/views/turmas/planning.html.erb
@@ -10,7 +10,7 @@
 
 <ul>
 	<li>
-		<a href="javascript:void(0);" id="addEncontro">Adicionar encontro</a>
+		<a href="javascript:void(0);" id="addEncontro" class="btEnviarForm">Adicionar encontro</a>
 	</li>
 	<li class="hidden encontro">
 		Inserir encontro <br/>
@@ -31,7 +31,7 @@
 	</li>
 	<li>
 		<% if @meetings.size > 0 %>
-			<table width="990" border="1">
+			<table width="990" border="1" bgcolor="#e7f3f9">
 				<tr>
 					<td valign="top">
 						<table width="200" id="guardaMeetings">
@@ -39,9 +39,9 @@
 								<th>Encontros</th>
 							</tr>
 							<% @meetings.each_with_index do |m, i| %>
-								<tr>
-									<td><a href="javascript:void(0);" id="<%= m.id %>"><%=i+1%>º encontro - <%= m.date %></a></td>
-								</tr>
+							<tr>
+								<td><a href="javascript:void(0);" id="<%= m.id %>" class="linkEncontro"><%=i+1%>º encontro - <%= m.date %></a></td>
+							</tr>
 							<% end %>
 						</table>
 					</td>
@@ -53,14 +53,13 @@
 							<tr>
 								<td colspan="2">
 									<table id="tabelaResults">
-										
 									</table>
 								</td>
 							</tr>
 							<tr>
 								<td colspan="2">
-									<a href="javascript:void(0);" style="float:right;" id="salvarHorario">Salvar</a>
-									<a href="javascript:void(0);" style="float:right;" id="novoHorario">Novo</a>
+									<a href="javascript:void(0);" style="float:right;" id="salvarHorario" class="btEnviarForm">Salvar</a>
+									<a href="javascript:void(0);" style="float:right;" id="novoHorario" class="btEnviarForm">Novo</a>
 								</td>
 							</tr>
 						</table>
@@ -92,6 +91,19 @@
 
 		$("#guardaMeetings a").click(function(){
 			meeting = $(this).attr('id');
+			$("#sacateta th").text( $(this).html() );
+			$.ajax(
+			{
+				url: '<%= see_activity_path %>',
+				type: "GET",
+				data:{
+					"atividade":{
+						"meeting_id": meeting
+					}
+				}
+			}).done(function(data){
+				$("#tabelaResults").html(data);
+			});
 		});
 		$("#guardaMeetings a").eq(0).trigger('click');
 
