--- a/app/views/turmas/_menu.html.erb
+++ b/app/views/turmas/_menu.html.erb
@@ -1,4 +1,5 @@
 <%= link_to "Cursos", courses_path %> |
 <%= link_to "Turmas", teams_path %> |
 <%= link_to "Alunos", students_path %>  |
-<%= link_to "Interessados", interested_path %> 
+<%= link_to "Interessados", interested_path %> |
+<%= link_to "Inscrições", registration_path %> 
