Integrando financeiro e servicos

--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -2,6 +2,6 @@
 <% content_for :title do %> Novo Cliente - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Novo cliente</h1>
+<h1>Novo Serviço</h1>
 
 <%= render 'form' %>
