--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,10 +8,10 @@
                 <div id="menuInternas">
                     <ul>
                         <li><%= link_to "", dashboard_path, :id => "home", :title => "Página inicial"%></li>
-                        <li><%= link_to "", courses_path, :id => "cursos", :title => "Cursos", :class => "cursos turmas alunos interessados" %></li>
-                        <li><%= link_to "", services_path, :id => "servicos", :class => 'servicos agenda-de-servicos', :title => "Serviços"%></li>
+                        <li><%= link_to "", courses_path, :id => "cursos", :title => "Cursos", :class => "cursos turmas alunos interessados inscricoes" %></li>
+                        <li><%= link_to "", services_path, :id => "servicos", :class => 'servicos prestadores agenda-de-servicos clientes', :title => "Serviços"%></li>
                         <li><%= link_to "", assessoria_index_path, :id => "assessoria", :title => "Assessoria"%></li>
-                        <li><%= link_to "", financeiro_index_path, :id => "financeiro", :title => "Financeiro"%></li>
+                        <li><%= link_to "", financeiro_index_path, :id => "financeiro", :class => "financeiro", :title => "Financeiro"%></li>
                     </ul>
                 </div>
 
@@ -36,7 +36,7 @@
 
             <div id="guardaMenuCategoria">
                 <p>
-					<%= yield :menu %>
+					<%= menu %>
                 </p>
             </div>
         </div>
