--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -21,6 +21,6 @@
 
 <ul>
 	<li><%= link_to "Criar turma", teams_new_path, :class => "btEnviarForm" %></li>
-	<li><%= link_to "Cancelar curso", courses_cancel_path, :class => "btEnviarForm" %></li>
+	<li><%= link_to "Cancelar curso", cancel_course_path, :class => "btEnviarForm" %></li>
 	<li><%= link_to "Voltar", courses_path, :class => "btEnviarForm" %></li>
 </ul>
