--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for (@course), :url => "/cursos" do |c| %>
+<%= form_for @course do |c| %>
 
 <% if @course.errors.any? %>
     <div id="error_explanation">
