--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -2,6 +2,6 @@
 <% content_for :title do %> Atualizar alunos - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Editar aluno - <%= @student.name %></h1>
+<h1>Editar aluno - <%= @students.name %></h1>
 
 <%= render 'form' %>
